--- a/DataMiner/DataMiner.csproj
+++ b/DataMiner/DataMiner.csproj
@@ -58,6 +58,12 @@
   <ItemGroup>
     <Compile Include="CityReader.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Description.cs">
+      <DependentUpon>Monitor.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Facilities.cs">
+      <DependentUpon>Monitor.tt</DependentUpon>
+    </Compile>
     <Compile Include="Flat.cs" />
     <Compile Include="FlatReader.cs" />
     <Compile Include="Flats.cs">
@@ -66,6 +72,7 @@
     <Compile Include="FlatStatuses.cs">
       <DependentUpon>Monitor.tt</DependentUpon>
     </Compile>
+    <Compile Include="Helpers.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Monitor.Context.cs">
       <AutoGen>True</AutoGen>
