--- a/airbnbmonitor/Web.config
+++ b/airbnbmonitor/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-airbnbmonitor-20160626023515.mdf;Initial Catalog=aspnet-airbnbmonitor-20160626023515;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MonitorEntities" connectionString="metadata=res://*/Monitor.csdl|res://*/Monitor.ssdl|res://*/Monitor.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Monitor;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MonitorEntities" connectionString="metadata=res://*/Monitor.csdl|res://*/Monitor.ssdl|res://*/Monitor.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5024.Smarterasp.net;initial catalog=DB_A0B655_monitor;User Id=DB_A0B655_monitor_admin;Password=madsql0481;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
