--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /packages/Microsoft.ApplicationInsights.2.0.0
 /packages/CsQueryLaster.1.3.5.200
 /packages/Antlr.3.4.1.9004/lib
+/packages/Microsoft.ApplicationInsights.Agent.Intercept.1.2.1
