--- a/tester/App.config
+++ b/tester/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="MonitorEntities" connectionString="metadata=res://*/Monitor.csdl|res://*/Monitor.ssdl|res://*/Monitor.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Monitor;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="MonitorEntities" connectionString="metadata=res://*/Monitor.csdl|res://*/Monitor.ssdl|res://*/Monitor.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5024.Smarterasp.net;initial catalog=DB_A0B655_monitor;User Id=DB_A0B655_monitor_admin;Password=madsql0481;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
