--- a/airbnbmonitor/packages.config
+++ b/airbnbmonitor/packages.config
@@ -66,6 +66,7 @@
   <package id="React.Web.Mvc4" version="3.1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net452" />
+  <package id="System.Web.Optimization.React" version="3.1.0" targetFramework="net452" />
   <package id="VroomJs" version="1.2.3" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
